crates/capsec/tests/compile_fail/context_tuple_struct.rs
/// #[capsec::context] rejects tuple structs.
use capsec::prelude::*;

#[capsec::context]
struct Bad(FsRead);

fn main() {}
